# ros2-pedestrian-aware-navigation

./: README.md  package.xml  setup.cfg  setup.py
config/: demo.rviz  params.yaml
launch/: demo.launch.py  full_demo.launch.py  pedestrian_safety.launch.py
pedestrian_aware_tb4/nodes/: fake_scenario.py  pedestrian_pipeline.py  risk_filter.py  robot_simulator.py  robot_simulator.py.save  rviz_overlay.py
pedestrian_aware_tb4/utils/: imm_tracker.py  intent_estimator.py  risk_model.py
test/: test_imm_tracker.py  test_intent_estimator.py
